# QSLFrameWork

./: CMakeLists.txt  LICENSE  README.md  main.cpp
assets/model/: bio.mtl  chonglou.mtl  spider.mtl  tb.mtl
include/: cassimpmodel.h  cgl.h  csdl2.h  ctexture.h  shaderprogram.h  util.h
shader/: basic1.frag  basic1.vert  basic2.frag  basic2.vert  normal_map.frag  normal_map.vert  with_texture.frag  with_texture.vert  without_texture.frag
src/: cassimpmodel.cpp  cgl.cpp  csdl2.cpp  ctexture.cpp  shaderprogram.cpp  util.cpp
